--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "rollup": "^4.14.2",
     "scheduler": "^0.23.0",
     "source-map-js": "^1.2.0",
@@ -22,5 +23,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "web-vitals": "^3.5.2"
+  }
 }
